# hyper-brain

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CODEOWNERS  CONTRIBUTING.md  IMPLEMENTATION-PLAN.md  LICENSE  Makefile  README.md  brain  brain.ps1
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: Dockerfile  Dockerfile.agent  pyproject.toml  requirements.txt
app/agents/brain_agent/: __init__.py
app/agents/brain_agent/.adk/: session.db
app/brain_app/: __init__.py  config.py  genai_retry.py  inventory.py  models.py  observability.py  okf.py  prompts.py
app/brain_app/agent/: __init__.py  agent.py  code_executor.py  fake_model.py  model.py  registry.py  studio.py  tools.py
app/brain_app/agent/.adk/: session.db
app/brain_app/agent/.adk/eval_history/: agent_golden_1783085438.9811506.evalset_result.json  agent_isolation_1783085438.971304.evalset_result.json
app/brain_app/agent/evals/: README.md  golden.evalset.json  isolation.evalset.json
app/brain_app/auth/: __init__.py  authorize.py  identity.py  shares.py  tokens.py  verify.py
app/brain_app/embeddings/: __init__.py  base.py  fake.py  vertex.py
app/brain_app/eval/: __init__.py  rubrics.py  sxs.py
app/brain_app/indexer/: __init__.py  build.py  chunk.py  graph.py
app/brain_app/ingest/: __init__.py  curate.py  models.py  pii.py  pipeline.py  run.py  sources.py  state.py
app/brain_app/ingest/adapters/: __init__.py  base.py  git.py  local.py  web.py
app/brain_app/ingest/parsers/: __init__.py  base.py  docx.py  html.py  markdown.py  pdf.py
app/brain_app/oauth/: __init__.py  app.py  audit.py  google.py  issuer.py  keys.py  run.py
app/brain_app/retrieval/: __init__.py  answer.py  bm25.py  gemini.py  index.py  search.py
app/brain_app/safety/: __init__.py  model_armor.py
app/brain_app/serving/: __init__.py  agent_run.py  attachments.py  drafts.py  gitingest.py  linker.py  memory.py  modelcache.py  proposals.py  reindex.py  reports.py  restapi.py  review.py  reviewer.py  server.py  service.py  transcripts.py
app/tests/: conftest.py  test_agent_build.py  test_agent_eval.py  test_agent_isolation.py  test_agent_run.py  test_attachments.py  test_auth_tokens.py  test_auth_verify.py  test_auth_write.py  test_chunk.py  test_config.py  test_drafts.py  test_embeddings_vertex.py  test_gitingest.py  test_graph.py  test_guest.py  test_index_gcs.py  test_indexer_idempotency.py  test_ingest_adapters.py  test_ingest_curate.py  test_ingest_isolation.py  test_ingest_parsers.py  test_ingest_pii.py  test_ingest_pipeline.py  test_inventory.py  test_isolation.py  test_linker.py  test_memory.py  test_model_armor.py  test_modelcache.py  test_moderation.py  test_oauth_core.py  test_oauth_server.py  test_oauth_service.py  test_oauth_verify.py  test_observability.py  test_okf.py  test_personal_domains.py  test_phase9.py  test_prompts.py  (+16 more)
app/tests/fixtures/: sample.html
config/: controlled.policy.yaml  controlled.tfvars.example  models.yaml  personal.policy.yaml  personal.tfvars.example  profiles.md  sources.yaml
corpus/: domains.yaml
corpus/commons/: company-handbook.md  getting-started-with-the-brain.md  glossary.md  knowledge-bundles-and-concepts.md  open-knowledge-format.md  security-and-privacy-basics.md  sharing-and-collaboration.md  welcome-to-hyper-brain.md  writing-good-notes.md
corpus/enterprise-ai-recruitment/: ai-sourcing-matching.md  bias-audits-compliance.md  candidate-data-privacy.md  index.md  interview-copilots.md
corpus/finserv-ai-engineering/: feature-stores-for-real-time-ml-in-banking.md  guardrails-and-prompt-injection-defence-for-banking-copilots.md  in-tenancy-vector-search.md  index.md  model-risk-governance-llms.md  rag-trade-surveillance.md  realtime-fraud-detection.md
docs/: LINEAGE.md  agent-platform-opportunities.md  oauth.md  observability.md
infra/: README.md  controlled.tf  main.tf  oauth.tf  outputs.tf  providers.tf  services.tf  variables.tf  versions.tf
infra/bootstrap/: main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/code_interpreter/: main.tf  outputs.tf  variables.tf
infra/modules/iam/: main.tf  outputs.tf  variables.tf
infra/modules/observability/: main.tf  outputs.tf  variables.tf
infra/modules/registry/: main.tf  outputs.tf  variables.tf
infra/modules/run_job/: main.tf  outputs.tf  variables.tf
infra/modules/run_service/: main.tf  variables.tf
infra/modules/storage/: main.tf  outputs.tf  variables.tf
infra/modules/vertex/: main.tf  outputs.tf
infra/policy/: README.md  controlled.rego  security.rego
raw/finserv/: feature-stores-for-realtime-ml.md  guardrails-prompt-injection.md
scripts/: export_ui_data.py  preflight.ps1  preflight.sh  provision_agent_engine.py  provision_code_interpreter.py  provision_model_armor.py
ui/: Dockerfile  README.md  app.js  auth.js  index.html  lib.js  live.js  serve.py  styles.css
ui/test/: lib.test.mjs
video/: .gitignore  README.md  package-lock.json  package.json  remotion.config.ts  tsconfig.json
video/audio/: make_soundtrack.py
video/src/: HyperBrainPromo.tsx  Root.tsx  fonts.ts  scenes.tsx  theme.ts  ui.tsx
