[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brain-app"
version = "0.1.0"
description = "hyper-brain retrieval core and serving"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "paul-byford" }]
dependencies = [
  "numpy>=1.26",
  "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/paul-byford/"

[project.optional-dependencies]
# Cloud adapters and serving, wired in later phases. Kept optional so the
# offline core installs with no heavy or cloud dependencies.
vertex = ["google-cloud-aiplatform>=1.60"]
# Serving: the MCP server, real Google OIDC token verification, and optional
# OpenTelemetry tracing to Cloud Trace (section 10). The offline core and the
# personal demo need none of this; google-auth verifies production Google-signed
# ID tokens, and the otel packages are only used when BRAIN_OTEL is set.
mcp = [
  "mcp>=1.2",
  "google-auth>=2.30",
  "opentelemetry-sdk>=1.20",
  "opentelemetry-exporter-gcp-trace>=1.6",
  # The deployed brain loads the index/policy from GCS and runs the in-tenancy
  # Vertex path (Gemini synthesis via google-genai; embeddings via the vertex extra).
  "google-cloud-storage>=2.16",
  "google-genai>=1.0",
  # Pure-Python PDF text extraction for uploaded files, in-tenancy (no third-party
  # service). Scanned/image PDFs need Document AI instead (BRAIN_DOCAI_PROCESSOR).
  "pypdf>=4.0",
]
# The ADK demo agent and its offline eval tier. The [eval] sub-extra pulls ADK's
# eval framework (tool_trajectory + ROUGE response_match) so the golden and
# isolation evals run free in CI.
agent = ["google-adk[eval]>=1.0"]
# The brain's in-process live agent run (the Agents page "Run live"): google-adk
# without the eval framework, kept lean. Imported lazily so it never loads on the
# brain's normal MCP/REST request path.
agentrun = ["google-adk>=1.0"]
# The in-tenancy OAuth 2.1 Authorization Server that lets remote MCP clients
# (Claude/ChatGPT custom connectors) register and sign in. Stateless: all OAuth
# state is signed JWTs, so it runs on scale-to-zero Cloud Run with no datastore.
# PyJWT (with the crypto extra) does RS256 sign/verify and JWKS; google-auth
# verifies the upstream Google login (reused from the mcp extra at runtime).
oauth = [
  "pyjwt[crypto]>=2.8",
]
# Optional: export OpenTelemetry spans to any OTLP endpoint (for example a
# self-hosted, in-tenancy Langfuse) for LLM-native tracing. Off by default; enable
# with BRAIN_OTEL=langfuse and the standard OTEL_EXPORTER_OTLP_* env vars.
otlp = [
  "opentelemetry-exporter-otlp-proto-http>=1.20",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "bandit>=1.7",
  "pip-audit>=2.7",
]

[tool.hatch.build.targets.wheel]
packages = ["brain_app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
markers = [
  "eval: non-deterministic AI eval tier (offline, deterministic fakes)",
]
addopts = "-ra"
testpaths = ["tests"]
